--- a/TnP/package.json
+++ b/TnP/package.json
@@ -13,7 +13,9 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.5.0"
+    "react-pdf": "^9.2.1",
+    "react-router-dom": "^6.30.0",
+    "lucide-react": "^0.344.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
@@ -25,6 +27,11 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
     "sass": "^1.86.3",
-    "vite": "^6.2.0"
+    "vite": "^6.2.0",
+    "autoprefixer": "^10.4.18",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.5.3",
+    "typescript-eslint": "^8.3.0"
   }
 }
