--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,9 +15,11 @@
     "@mui/material": "^7.1.0",
     "axios": "^1.9.0",
     "lucide-react": "^0.344.0",
+    "mammoth": "^1.9.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.0.1",
+    "react-pdf": "^9.2.1",
     "react-router": "^7.6.0",
     "react-router-dom": "^7.6.0",
     "recharts": "^2.15.3",
