--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -23,12 +23,11 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+        cache-dependency-path: backend/package-lock.json  # Point to backend lock file
     
     - name: Install backend dependencies
-      working-directory: ./backend  # assuming your backend is in a 'backend' folder
-      run: |
-        npm ci
-        npm install
+      working-directory: ./backend
+      run: npm ci
     
     - name: Run backend tests
       working-directory: ./backend
@@ -36,7 +35,6 @@ jobs:
 
   test-frontend:
     name: Test Frontend
-    needs: test-backend  # run frontend tests only after backend tests pass
     runs-on: ubuntu-latest
     
     strategy:
@@ -51,12 +49,11 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+        cache-dependency-path: frontend/package-lock.json  # Point to frontend lock file
     
     - name: Install frontend dependencies
-      working-directory: ./frontend  # assuming your frontend is in a 'frontend' folder
-      run: |
-        npm ci
-        npm install
+      working-directory: ./frontend
+      run: npm ci
     
     - name: Run frontend tests
       working-directory: ./frontend
