--- a/backend/package.json
+++ b/backend/package.json
@@ -1,10 +1,13 @@
+
 {
   "name": "t",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest", 
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "start": "nodemon run index",
     "dev": ""
   },
