--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,9 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "test": "vitest run",
+    "test:watch": "vitest watch",
+    "test:coverage": "vitest run --coverage",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
