--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,8 @@
     "react-router": "^7.6.0",
     "react-router-dom": "^7.6.0",
     "recharts": "^2.15.3",
-    "sass": "^1.71.1"
+    "sass": "^1.71.1",
+    "vitest": "^3.1.3"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.1",
