--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "react-router-dom": "^7.6.0",
     "recharts": "^2.15.3",
     "sass": "^1.71.1",
+    "styled-components": "^6.1.18",
     "vitest": "^3.1.3"
   },
   "devDependencies": {
